// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CodeEditor renders correctly with file 1`] = `
"
 📝 Code Editor

 📄 src/index.ts

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Code content will appear here...                                                               │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 🔧 File Tree

 📁 src/
   📄 index.ts
   📁 components/
     📄 ComposerApp.tsx
     📄 ChatInterface.tsx
"
`;

exports[`CodeEditor renders correctly without file 1`] = `
"
 📝 Code Editor

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │                                                                                                │
 │                                        No file selected                                        │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 🔧 File Tree

 📁 src/
   📄 index.ts
   📁 components/
     📄 ComposerApp.tsx
     📄 ChatInterface.tsx
"
`;
